--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,63 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+    @apply font-normal text-slate-800;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.font-bold { font-weight:700!important;}
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+h1, h2, h3, h4, h5, h6 {@apply font-bold; }
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+p { @apply mb-2; }
 
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+p:last-child { @apply mb-0;}
+
+button { 
+    @apply text-xl text-white bg-alchemy hover:bg-rose-800  px-6 py-3 rounded-md font-bold tracking-wider shadow-md  border border-alchemy mb-4;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+button.reverse {
+    @apply text-white bg-alchemy hover:bg-rose-800;
 }
+.card { @apply border border-black/20 bg-white hover:bg-logo-lightest  hover:border-alchemy shadow-md;}
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
+.card img { @apply rounded-t-md scale-100 transition-all;}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+.card:hover img { @apply  rounded-t-md scale-125 transition-all; }
+.card:hover h4 { @apply font-bold;}
+.card:hover button { }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
+.nav-links > a {
+
+    /*@apply text-3xl hover:underline hover:underline-offset-4 hover:decoration-1 hover:decoration-dotted hover:decoration-alchemy;*/
+    @apply  relative transition ease-out duration-300;
+    
+    }
+    
+    .nav-links > a:after {
+      content: "";
+      transform: translateX(-150%) skewX(-35deg);
+      z-index: -1;
+      opacity:0;
+      bottom:2px;
+      width:100%;
+      
+      @apply   absolute h-0.5 bg-logo/80  transition ease-out duration-300;
+    }
+    
+    .nav-links > a:hover {
+      @apply transition ease-out duration-300;
+    }
+    
+    .nav-links > a:hover:after {
+      @apply transition ease-out duration-300 z-50;
+      transform: translateX(-100%) skewX(-35deg);
+      opacity:1.0;
+    }
+
+    main a, footer a {
+        @apply hover:underline hover:underline-offset-2 text-alchemy font-bold ;
+    }
